Expanded Cheat Menu:
- Added func names from XInput to RetName.

### Changed:
- Added negative values to Set Soil Quality.

Mods:
Construction: Show Drone Grid 0.5:
Fix for devs blocking rovers from ShowBuildingHexes.

Omega Unlocks All Slowly 0.3:
Added mod option to pick how many Sols between unlocks.

Research Filter 0.7:
Completed didn't stay hidden.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Construction Show Drone Grid/changes.txt
+++ b/Mods ChoGGi/Construction Show Drone Grid/changes.txt
@@ -1,5 +1,8 @@
+v0.5
+Fix for devs blocking rovers from ShowBuildingHexes.
+
 v0.4
-Added ModConfig option to disable it.
+Added mod option to disable it.
 
 v0.3
 Now shows grid for RC Commanders as well.
