--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1087,6 +1087,7 @@ Only works on colonists that have yet to spawn (maybe).",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000905,Switch between FPS, ms, and off.,
 302535920000421,Enable counter with in-game options (I can add an option here if it's wanted).,
 302535920000419,125 = 47251 hex spots.,
 302535920000413,Delay,
