Expanded Cheat Menu:
### Added:
- Debug>Toggles>Override Condition Prereqs: All storybit/negotiation/etc options are enabled.

### Changed:
- Merged some menu items into submenus and other rearranging.

Mods:
Change Rocket Skin 0.3:
Forgot to add the DropPod entity from gagarin.

Pod: No Bounce:
Stop the pods from the landing bounce (they just go poof).

Nursery: Limit Birthing To Spots:
No babby if there's no nursery spot available.
This uses a per-dome count; if there's no nursery in a dome it'll never have babbies (erm, the colonists will never have 'em).

RC Miner 1.9:
Added support for LukeH's Resources (not Hydrocarbons).
Cleaned up the code a bit.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -237,7 +237,7 @@ You can copy and paste numbers if you want.",
 
 <color green>s</color> = <color yellow>SelectedObj</color>, <color green>c()</color> = <color yellow>GetTerrainCursor()</color>, <color green>restart()</color> = <color yellow>quit(""restart"")</color>",
 302535920001401,"Removed missing mod building from %s: %s, entity: %s, handle: %s",
-302535920001074,Ged Presets Editor,
+302535920001074,Ged Presets,
 302535920000503,<right_click> an item/submenu to add/remove it from the quickbar.,
 302535920001465,Stop talking and start cheating!,
 302535920001466,"I know what I'm doing, show me the console log.",
@@ -1088,9 +1088,12 @@ Only works on colonists that have yet to spawn (maybe).",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000926,Toggle,
+302535920000929,Reloads,
+302535920000421,Override Condition Prereqs,
+302535920000919,All storybit/negotiation/etc options are enabled.,
 302535920000905,"Switch between FPS, ms, and off.
 This is temporary, use Options>Video>Framerate Counter to permanently save it.",
-302535920000421,Enable counter with in-game options (I can add an option here if it's wanted).,
 302535920000419,125 = 47251 hex spots.,
 302535920000413,Delay,
 302535920000415,Delay in ms between updating paths (0 to update every other render).,
@@ -1132,7 +1135,7 @@ You need my HelperMod installed to be able to use this.",
 302535920001417,Follow Mouse Grid Size,
 302535920001418,Sets the size of the Building/Flight grid.,
 302535920001419,Follow Mouse Grid Trans,
-302535920001420,How transparent the Building grid is.,
+302535920001420,How transparent the Building/Flight grid is.,
 302535920001359,Test activate a story bit.,
 302535920001358,Group,
 302535920001382,Game Time,
@@ -1177,7 +1180,8 @@ Sounds like a borked save; send me the file and I'll take a look",
 302535920000877,Remove waypoints from the map and reset colours (select any object type to remove them all).,
 302535920000878,Skip Flags,
 302535920000879,"Doesn't add the little flags, just lines and spheres (good for larger maps).",
-302535920000454,Fires some commands to reload lua files (use OnMsg.ReloadLua() to listen for it).,
+302535920000454,"Fires some commands to reload lua files (use OnMsg.ReloadLua() to listen for it).
+<color red>Warning</color>: Disables cheat menu submenus.",
 302535920000874,(see Path Markers to mark more than one at a time).,
 302535920001176,Toggle showing FX debug info in console.,
 302535920001184,Particles,
@@ -1192,7 +1196,7 @@ Use Shift + Arrow keys to change the height/radius.",
 302535920000455,Object Cloner,
 302535920000456,Clones selected/moused over object to current mouse position (should probably use the shortcut key rather than this menu item).,
 302535920000457,Anim State Set,
-302535920000458,Make object dance on command.,
+302535920000458,Make selected object dance on command.,
 302535920000459,Anim Debug Toggle,
 302535920000460,Attaches text to each object showing animation info (or just to selected object).,
 302535920000462,Maps paths in real time,
@@ -1779,7 +1783,6 @@ Use Shift- or Ctrl- for random colours/reset colours.",
 AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000700,Scanner Queue Larger,
 302535920000701,Queue up to 100 squares.,
-302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
 302535920000201,Active,
 302535920000867,Toggle occurrence of <color yellow>%s</color> disasters.,
