Expanded Cheat Menu:
### Added:
- Drones>Drone Wasp Move Speed: Same as Drone Move Speed.

### Changed:
- Examine>Exec Code box uses Up/Down arrows to browse console history.
- * Move Speed is now set on map load.

### Fixed:
- Dust Devils overrode * Move Speed (thanks dukedom).

Lib:
- Colour Modifier checkmarks were broked.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -450,9 +450,10 @@ Source code needs to be placed at: ""<color green>%sSource</color>""
 Example: ""<color yellow>Source/Lua/_const.lua</color>""",
 302535920000264,Defaults to obj:GetObjectBBox() if it can't find a func.,
 302535920001514,Toggle visibility of an input box for executing code.,
-302535920001515,Press enter to execute code.,
+302535920001515,"Press <color green>%s</color> to execute code.
+Use <color green>%s</color>/<color green>%s</color> to browse console history.",
 302535920001516,o = examined object,
-302535920001517,"Use ""<color green>o</color>"" as a reference to the examined object.",
+302535920001517,Use <color green>o</color> as a reference to the examined object: <color yellow>IsValid(</color><color green>o</color><color yellow>)</color>.,
 302535920001500,userdata object probably needs UICity to translate.,
 302535920001472,BBox Toggle,
 302535920001473,Toggle showing object's bbox (changes depending on movement).,
@@ -1698,6 +1699,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email <
 302535920000673,info dialog.,
 302535920000676,Reset ECM Settings,
 302535920000677,Reset all ECM settings to default (restart to enable).,
+302535920000702,Drone Wasp Move Speed,
 302535920000356,Time Factor,
 302535920000387,Change the time factor (not permanently); for ease of screenshots or something.,
 302535920000523,How many to multiple the default speed by: <color green>%s</color>.,
