--- a/Mods ChoGGi/View Colony Map/changes.txt
+++ b/Mods ChoGGi/View Colony Map/changes.txt
@@ -1,5 +1,6 @@
 v1.1
 Merged some funcs into Library mod.
+Added msg to breakthroughs telling how to update.
 
 v1.0
 Added checkbox to show map location breakthroughs.
