Expanded Cheat Menu: - Version bump.
Mods:
Nursery: Limit Birthing To Spots 0.5:
Added mod option to count Ultimate Nurseries INSTEAD of regular ones.
Why can't people edit existing buildings instead of adding a new ones?

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -748,6 +748,8 @@ Use with <color green>%s</color> to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere.
 See also %s.",
+302535920000931,Spawn POIs,
+302535920000934,POI,
 302535920000171,Unlock Anomaly BreakThroughs,
 302535920000173,Unlock any breakthroughs in anomalies (not planetary ones).,
 302535920001587,Lightning Strike,
@@ -771,7 +773,7 @@ This will switch to a new map.",
 302535920001392,Sets story.cooldown_end to GameTime.,
 302535920001393,Clear Cooldowns,
 302535920001394,Spawn Planetary Anomalies,
-302535920001395,Adds Anomaly locations to Planetary View.,
+302535920001395,Adds %s locations to Planetary View.,
 302535920000250,Default mapdata type,
 302535920001372,Change the number on the end to fire that amount (ex: <color green>%s25</color>).,
 302535920001373,Lightning Strike,
