--- a/Mods ChoGGi/Nursery Limit Birthing To Spots/changes.txt
+++ b/Mods ChoGGi/Nursery Limit Birthing To Spots/changes.txt
@@ -1,3 +1,7 @@
+v0.5
+Added mod option to count Ultimate Nurseries INSTEAD of regular ones.
+Why can't people edit existing buildings instead of adding a new ones?
+
 v0.4
 Added mod option to allow Incubator mod to relocate newborns to incubator dome.
 
