Expanded Cheat Menu:
- Mod Upload: Might've gotten rid of (one occurrence) of that mod content is missing error.

Mods:

DroneHub: Heavy Load Strobe:
Adds a blinking light above DroneHubs with heavy loads.
It uses the demolish blinky, but set higher above (try not to be confused).

Fix: Missing Mod Icons 0.4:
Cleaner and faster way of fixing paths (no more checking presets, I just check mod items).

Stop Current Disasters 0.6/Stop Colonist Death Failure 0.2:
Added a comment to get around the bug of a one liner script...

github@choggi.org

--- a/Mods ChoGGi/Fix Missing Mod Icons/changes.txt
+++ b/Mods ChoGGi/Fix Missing Mod Icons/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Cleaner and faster way of fixing paths (no more checking presets, I just check mod items).
+
 v0.3
 Fixed Tech and Build Submenu Cats.
 
