Expanded Cheat Menu:
- 3d manipu didn't save orig on load.
- Cleaned up AttachToNearestDome.
- Added rightclick clipboard to attaches in examine.
- Removed not used dialogs folder.
- Removed Fire Most Fixes menu item.

Mods:
Drone: Stop Seed Harvest:
Stop drones from harvesting seeds (forest plant, open farm, and random trees).
Includes mod option to allow harvesting.
borked at the moment, need to rebuild plant to harvest.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -376,8 +376,8 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000071,Show Mods Log,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920000589,<left_click> Examine <right_click> Clipboard,
 302535920000904,<right_click> to copy <color yellow>%s</color> to clipboard.,
-302535920000883,<right_click> Clipboard,
 302535920000422,Hex Shape,
 302535920000417,Null reference,
 302535920000628,"Close the examine dialog
@@ -1369,7 +1369,7 @@ Mechanized: 1,000,000",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
-302535920000036,Click lightly,
+302535920000036,<color red>Click lightly!</color>,
 302535920001533,Remove Invalid Label Objects,
 302535920001534,Checks the city.labels for invalid objects and removes them from the label.,
 302535920001483,Missing Mod Buildings,
@@ -1382,7 +1382,7 @@ This may break the save in other ways, best to just use it for testing.",
 302535920001295,Drones Not Repairing Domes,
 302535920001296,If your drones are just dumping polymers into the centre of your dome.,
 302535920000922,Fixes,
-302535920000935,Most,
+302535920000935,Most Fixes,
 302535920000938,Toggles,
 302535920000615,Sort Command Center Dist,
 302535920001071,Drone Charges From Rover Wrong Angle,
@@ -1412,9 +1412,6 @@ You may need to toggle the recall drones button (for certain issues).",
 This will do a little copy n paste fix (they'll keep the same traits/whatnot).",
 302535920000587,Remove Missing Class Objects,
 302535920000588,"May crash game, SAVE FIRST. These are probably from mods that were removed (if you're getting a PinDlg error then this should fix it).",
-302535920000589,Fire Most Fixes,
-302535920000590,"Fires all the fixes in the ""Most"" menu (nuke 'em from orbit and all that).
-Should be safe to use without breaking anything.",
 302535920000591,Colonists Trying To Board Rocket Freezes Game,
 302535920000592,"Doesn't fix the underlying cause, but it works.",
 302535920000593,Remove Particles With Null Polylines,
