--- a/Mods ChoGGi/Show Saved Colonies/changes.txt
+++ b/Mods ChoGGi/Show Saved Colonies/changes.txt
@@ -1,3 +1,7 @@
+v1.0
+I borked the original landing spots visiblity (never went away).
+Code cleanup.
+
 v0.9
 Made it wait till PlanetRotationObj is created.
 
