Lib: - Sped up CSV mapdata export / removed dupes (thanks ve2dmn/Gem).
Base Walls:
Same basic idea as ErrantSword's mod, with a few changes:
There's no electrical grid added to them.
I used mini dome passages (sorry no fancypants dragging), and some other entities (for "corner" hubs).
They will block drones from pathing through them.
They're also free/instant build, 'cause why not?
The change skin will switch between the passage skins.
Use Shift-E/Shift-Q while building to adjust the length (change in Options>Bindings).
I tried adding gamepad bindings, but it seems to eat them (no error msgs).

There are buttons you can use to rotate/adjust length once placed (gamepads do work with them).

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1467,7 +1467,7 @@ Open <color green>%s</color> to see all the textures, the tooltips show the text
 302535920001501,Map Data,
 302535920001502,"Export map location data to <color green>%sMapData.csv</color> (will take awhile).
 
-See survivingmarsmaps.com for a filtered list.
+See survivingmaps.com for a filtered list.
 Don't use in start new game screens (rating/topo will be messed up).
 Difficulty Challenge/Named Location may not work on some saves (best to start a new game, or run from main menu).",
 302535920001489,Toggle Map Edge Limit,
