Expanded Cheat Menu:
### Changed:
- Added Update Text func/button to MultiLineText (only shows up for some stuff like view console text, or view text in examine).

### Removed:
- Gravity options (you can use Bouncy Drones if you want it).

Lib:
- Added Update Text func/button to MultiLineText.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2,6 +2,7 @@ ID, Text, Translation, Old Translation, Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920001026,Update Text,
 302535920001449,Export,
 302535920000758,Will take some time for 25K and up.,
 302535920000866,Restart to disable.,
@@ -86,7 +87,6 @@ ID, Text, Translation, Old Translation, Gender
 302535920000753,Will only apply to selected colonist.,
 302535920000769,Selected,
 302535920000834,Max,
-302535920000841,Current gravity: <color green>%s</color>,
 302535920000933,Current speed: <color green>%s</color>,
 302535920001084,Reset,
 302535920000031,Find Nearest Resource,
@@ -319,6 +319,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000564,Set Soil Quality,
 302535920000709,"Allows you to start building on uneven ground, and removes the size limits.",
 302535920000722,Open the domes to the fresh air (or lack of).,
+302535920000381,Replaces text using the same func that created it.,
+302535920000382,Closes dialogs and sends positive return value.,
 302535920001529,"Press <color green>Enter</color> to select next found text, and <color green>Ctrl-Enter</color> to scroll to previous found text.",
 302535920001474,Code Highlight,
 302535920001475,Toggle lua code highlighting.,
@@ -359,7 +361,6 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001287,"Instead of a single line, you can enter/execute code in a textbox.",
 302535920001308,Settings,
 302535920000734,Clear Log,
-302535920001026,Update Text,
 302535920001091,Flushes log to disk and displays it.,
 302535920001152,Clear out the console log (F9 also works).,
 302535920001154,Displays the log text in a window you can copy sections from.,
@@ -839,7 +840,7 @@ Buildings are still unlocked.",
 302535920000246,Missle,
 302535920000252,Targeted to mouse cursor (use arrow keys to select and enter to start).,
 302535920000253,"Core: Repeatable, exploit core resources.",
-302535920000254,"Deep: Toggleable, exploit deep resources.",
+302535920000254,Deep: unlock tech to exploit deep resources.,
 302535920000255,Deep,
 302535920000256,Core,
 302535920000257,Deep Scan,
@@ -1026,7 +1027,6 @@ Max: 100000 (choose fill to reset),
 
 Warning: Disable births or else...",
 302535920000838,Colonist Move Speed,
-302535920000840,Set Colonist Gravity,
 302535920000842,Select a workplace or training building.,
 302535920000843,Toggled traits,
 302535920000844,Fired workers,
@@ -1045,8 +1045,6 @@ Warning: Disable births or else...",
 302535920000378,How fast colonists will move.,
 302535920000379,Add Or Remove Applicants,
 302535920000380,Add random applicants to the passenger pool (has option to remove all).,
-302535920000381,Colonists Gravity,
-302535920000382,Change gravity of Colonists.,
 302535920000383,Fire All Colonists!,
 302535920000384,Fires everyone from every job.,
 302535920000385,Set All Work Shifts,
@@ -1267,9 +1265,7 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000915,Max: 1000.,
 302535920000916,DroneHubs can control <color green>%s</color> drones.,
 302535920000918,Set DroneHub Drone Capacity,
-302535920000920,Set RC Gravity,
 302535920000921,RC Rovers can control <color green>%s</color> drones.,
-302535920000923,Set Drone Gravity,
 302535920000924,Set RC Rover Drone Capacity,
 302535920000925,somewhere above 2000 will delete the save (when it's full),
 302535920000927,Set RC Transport Capacity,
@@ -1286,8 +1282,6 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000514,Select a DroneHub then change the amount of drones in said hub (dependent on prefab amount).,
 302535920000515,DroneFactory Build Speed,
 302535920000516,Change how fast drone factories build drones.,
-302535920000517,Drone Gravity,
-302535920000518,Change gravity of Drones.,
 302535920000519,Drone Battery Infinite,
 302535920000521,Drone Build Speed,
 302535920000522,Instant build/repair when resources are ready.,
@@ -1299,8 +1293,6 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000541,RC Set Charging Distance,
 302535920000542,Distance from power lines that rovers can charge.,
 302535920000544,How fast RCs will move.,
-302535920000545,RC Gravity,
-302535920000546,Change gravity of RCs.,
 302535920000549,RC Instant Resource Transfer,
 302535920000550,Make it instantly gather/transfer resources.,
 302535920000551,RC Storage Capacity,
