Expanded Cheat Menu:
- Moved some funcs around, cleaned up OnMsgs.

Mods:
Construction: Show Dust Grid 0.7:
Turned on dist/con site options by default.

Construction: Show Map Sectors 0.5:
Fix for saves where it wasn't showing up.
Lowered opacity of green squares.

Orbital Prefab Drops 0.7:
Issues when saving/loading a game during a drop off.
v0.6
Added other pod entity from gagarin.
Added dust to like with rockets (half the radius).

RC Garage 0.5:
Possible fix for missing selection panel items.

RC Miner 2.0:
Fix for bugged pin description.
Added another visual indicator of mining in progress.

Remove Building Limits 0.2:
Forgot to check option on startup.

Stop Current Disasters 0.7:
Added mod option to stop the mod from stopping disasters.

Upgrade Slots: Visitors/Capacity:
dds upgrades to increase the slot capacity (also increases electricity consumption).
Existing upgrades for the building == skip these upgrades (it will boost cap of upgrade 2).

github@choggi.org

--- a/Mods ChoGGi/Construction Show Dust Grid/changes.txt
+++ b/Mods ChoGGi/Construction Show Dust Grid/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+Turned on dist/con site options by default.
+
 v0.6
 Removed bandaid, if you have stuck grids: Select something from the build menu then cancel placing it.
 
