Expanded Cheat Menu:
### Fixed:
- Protection Radius wasn't opening (praise Black Jesus).

### Changed:
- Moved Protection Radius from Buildings to Radius.

Mods:
Maintenance Resource Collected:
Show how much has been collected for maintenance (useful for larger repairs).

Map Overview: Show Surface Resources:
Adds count of surface resources (metal/polymer) to each sector in the map overview.
Mod Options:
Show Metals/Show Polymers: What you'd expect.
Text Opacity: If you feel the text is overpowering the icons.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -680,8 +680,7 @@ it having been an evening of some small energy expenditure, O my brothers.
 So we got rid of the auto and stopped off at the Korova for a nightcap.",
 302535920000156,%s: Aliens? We gotta deal with aliens too?,
 302535920000159,Unlimited Wonders,
-302535920000160,"%s: Freedom for spires!
-Restart to set disabled.",
+302535920000160,%s: Freedom for spires!,
 302535920000161,%s: Buildings Instant Build,
 302535920001241,Instant Build,
 302535920000164,Storage Amount Of Diner & Grocery,
@@ -697,7 +696,7 @@ Will be overridden by %s.",
 302535920000176,Empty Mech Depot,
 302535920000177,Empties out selected/moused over mech depot into a small depot in front of it.,
 302535920000178,Protection Radius,
-302535920000179,Change threat protection coverage distance.,
+302535920000179,Change threat protection coverage distance (MDSLaser/DefenceTower).,
 302535920000180,Unlock Locked Buildings,
 302535920000181,"Shows a list of buildings you can unlock.
 This doesn't apply to sponsor limited ones; see Toggles>%s.",
@@ -1845,3 +1844,4 @@ Restart to set disabled.",
 302535920010006,Testing math: Start,
 302535920010007,Testing math: End,
 302535920010008,Testing math: Error file: (%s) line number: (%s) val1: (%s) val2: (%s) func: (math.%s),
+302535920011000,Cannibal,
