Mods: - Started changing all my strings to use string ids.
Lakes: Toggle Visibility 0.2:
Uses an ice/water texture to show the level now (less ugly/noticeable).

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -240,8 +240,6 @@ You can copy and paste numbers if you want.",
 302535920001074,Ged Presets,
 302535920000503,<right_click> an item/submenu to add/remove it from the quickbar.,
 302535920001465,Stop talking and start cheating!,
-302535920001466,"I know what I'm doing, show me the console log.",
-302535920001309,"Stop showing console log: Press Tilde or Enter and click the ""<color green>%s</color>"" button then make sure ""<color green>%s</color>"" is unchecked.",
 302535920000247,Startup ticks,
 302535920000729,You've started a mystery!,
 302535920000730,You've chosen a mystery!,
@@ -1845,3 +1843,137 @@ Restart to set disabled.",
 302535920010007,Testing math: End,
 302535920010008,Testing math: Error file: (%s) line number: (%s) val1: (%s) val2: (%s) func: (math.%s),
 302535920011000,Cannibal,
+302535920011001,5* The Amount,
+302535920011002,Clicking this once will add 5 times the amount of stored resources to all deposits of the same type (and make the grade very high).,
+302535920011004,It's a wall (use button to rotate after placing).,
+302535920011005,Adjustable Length Wall,
+302535920011006,Adjustable Length Walls,
+302535920011007,Wall Cap,
+302535920011008,Walls Cap,
+302535920011009,Cap off a wall.,
+302535920011010,Wall Cap Small,
+302535920011011,Walls Cap Small,
+302535920011012,Cap off a wall chibi.,
+302535920011013,Turn Wall Small,
+302535920011014,Turn Walls Small,
+302535920011015,Small turn gate.,
+302535920011016,Turn Wall Large,
+302535920011017,Turn Walls Large,
+302535920011018,Large turn gate.,
+302535920011019,Drone Ramp,
+302535920011020,Drone Ramps,
+302535920011021,Help the wee ones over the walls.,
+302535920011022,Something to use instead of the turns.,
+302535920011023,Eye,
+302535920011024,Eyes,
+302535920011025,Eyes always watching you.,
+302535920011026,Stumpy,
+302535920011027,Stumpies,
+302535920011028,Hunk 'o stump.,
+302535920011029,Holder Sphere,
+302535920011030,Holder Spheres,
+302535920011031,Glory be to the light (or planet or mirror).,
+302535920011032,Mars Star,
+302535920011033,Mars Stars,
+302535920011034,Bask in the glory of Mother Mars.,
+302535920011035,Umbrella,
+302535920011036,Umbrellas,
+302535920011037,Protect the poor walls from the deadly sun.,
+302535920011038,Corner Joiners,
+302535920011039,Base Walls,
+302535920011040,Holdee Swap,
+302535920011041,Different strokes for different folks.,
+302535920011042,Adjust Length,
+302535920011043,"Adjust length of placed wall.
+
+
+<em>Would you care for another schnitzengruben?</em>",
+302535920011044,Adjust Longer,
+302535920011045,Adjust Shorter,
+302535920011046,BaseWalls,
+302535920011047,Bottomless Storage,
+302535920011048,Bottomless Storages,
+302535920011049,Warning: Anything added to this depot will disappear.,
+302535920011050,Bottomless Waste Rock,
+302535920011051,Bottomless Waste Rocks,
+302535920011052,Warning: Any waste rocks dumped at this depot will disappear.,
+302535920011053,Change Spawn Type,
+302535920011054,Spawn wasp drones or regular drones.,
+302535920011055,Drone Type,
+302535920011064,Martian Aerodynamics,
+302535920011065,Always Wasp Drones,
+302535920011056,<left_click> Land this rocket somewhere else.,
+302535920011057,Reposition Rocket,
+302535920011058,Click To Move,
+302535920011066,Edge Scrolling,
+302535920011059,"Position: <position>
+
+Colonists: <colonist>
+
+Living Spaces: <spaces>",
+302535920011060,Current Dome,
+302535920011061,Currently selected dome,
+302535920011062,Force New Dome,
+302535920011063,Use this to force colonists to migrate.,
+302535920011067,Show during construction,
+302535920011068,Show during construction,
+302535920011069,Grid Size,
+302535920011070,Grid Opacity,
+302535920011071,This <name> will not be maintained (press for menu).,
+302535920011072,Maintenance Disabled,
+302535920011073,This <name> will be maintained (press for menu).,
+302535920011074,Maintenance Enabled,
+302535920011075,Toggle maintenance on this <name> only.,
+302535920011076,Toggles maintenance on only this <name>.,
+302535920011077,Toggle maintenance on all <name>.,
+302535920011078,Toggles maintenance on all <name> (all will be set the same as this one).,
+302535920011079,Build Distance,
+302535920011080,Dome Teleporter,
+302535920011081,It's a teleporter for your domes that acts like a passage.,
+302535920011082,Use Carry Amount,
+302535920011083,Carry Amount,
+302535920011084,Golden Storage,
+302535920011085,Golden Storages,
+302535920011086,Converts Metals to PreciousMetals.,
+302535920011087,Never Change,
+302535920011088,Remove the lock on this colonist.,
+302535920011089,Unlock Residence,
+302535920011090,Lock this colonist to always live at <name>.,
+302535920011091,Lock Residence,
+302535920011092,Remove the lock on this residence.,
+302535920011093,Unlock Residents,
+302535920011094,Lock all residents to this residence (if more residents are added you'll need to toggle this or lock each of them).,
+302535920011095,Lock Residents,
+302535920011096,Never Change,
+302535920011097,Remove the lock on this colonist.,
+302535920011098,Unlock Workplace,
+302535920011099,Lock this colonist to always work at <name>.,
+302535920011100,Lock Workplace,
+302535920011101,Remove the lock on this workplace.,
+302535920011102,Unlock Workers,
+302535920011103,Lock all workers to this workplace (if more workers are added you'll need to toggle this or lock each of them).,
+302535920011104,Lock Workers,
+302535920011105,"Working at the car wash
+Working at the car wash, yeah
+Come on and sing it with me, car wash
+Sing it with the feeling now, car wash, yeah",
+302535920011106,Martian Carwash,
+302535920011107,Martian Carwashes,
+302535920011003,Toggle Controls,
+302535920011108,Screenshots or topography images.,
+302535920011109,Toggle showing controls at bottom.,
+302535920011110,Dbl Size,
+302535920011111,Double Size,
+302535920011112,Toggle between original size and double.,
+302535920011113,Reset,
+302535920011114,Reset Dialog,
+302535920011115,Moves map back to original position and size.,
+302535920011116,Image,
+302535920011117,Use ScreenShots,
+302535920011118,Screenshots or topography images (needs my map images pack mod).,
+302535920011119,Update,
+302535920011120,Update Image,
+302535920011121,This will update the map image (resets camera orientation).,
+302535920011122,Set opacity of map dialog (0 to 240).,
+302535920011123,Click to go places (updates minimap first click).,
+302535920011124,Minimap,
