--- a/Mods ChoGGi/View Colony Map/changes.txt
+++ b/Mods ChoGGi/View Colony Map/changes.txt
@@ -1,3 +1,7 @@
+v1.3
+Added warning if random tech rule active.
+Hopefully focus works better on XBox.
+
 v1.2
 Added text to show Planetary Anomalies.
 
